problem completed and functional

--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
             <label for="shopping-list-entry">Add an item</label>
             <input type="text" name="shopping-list-entry" class="js-shopping-list-entry" placeholder="e.g., broccoli">
             <button type="submit">Add item</button>
+            <input type="checkbox" name="shopping-list-display-checkbox" class="js-shopping-list-display-checkbox">
+            <label for="shopping-list-display-checkbox">Hide checked items</label>
+            <p class="search-box">
+              <label for="search-box-input">Search for Item</label>
+              <input type="text" name="search-box-input" class="js-search-box" placeholder="Enter part or whole string for search">
+              <button type="button" class="js-search-button">Search</button>
+            </p>
         </form>
         <ul class="shopping-list js-shopping-list">
         </ul>
